# Vision-Agents

./: .gitignore  CLAUDE.md  README.md  conftest.py  dev.py  pyproject.toml
.github/: dependabot.yml
.github/actions/notify-slack/: action.yml
.github/workflows/: daily.yml  run_tests.yml  sync-from-upstream.yml
agents-core/: README.md  pyproject.toml
examples/01_simple_agent_example/: README.md
examples/02_golf_coach_example/: README.md
examples/04_football_commentator_example/: README.md  RUNNING_THE_EXAMPLE.md
examples/05_security_camera_example/: README.md
examples/08_agent_server_example/: README.md
examples/09_sales_assistant_example/: README.md
examples/10_local_transport_example/: README.md  __init__.py  local_transport_example.py  pyproject.toml
examples/11_moderation_example/: README.md  env.example  moderation_example.py  pyproject.toml
plugins/anam/: README.md  pyproject.toml
plugins/anam/example/: anam_avatar_example.py  pyproject.toml
plugins/anam/tests/: test_anam_plugin.py
plugins/anthropic/tests/: test_anthropic_llm.py
plugins/aws/example/: .env.example  aws_realtime_nova_example.py
plugins/aws/tests/: test_aws.py
plugins/cartesia/example/: README.md
plugins/decart/: README.md  pyproject.toml
plugins/decart/example/: README.md  decart_example.py
plugins/decart/tests/: test_decart_restyling.py
plugins/deepgram/: pyproject.toml
plugins/deepgram/tests/: test_deepgram_stt_close.py  test_deepgram_tts.py
plugins/elevenlabs/example/: README.md
plugins/elevenlabs/tests/: test_elevenlabs_stt.py  test_tts_close.py
plugins/gemini/: README.md
plugins/gemini/tests/: test_gemini_llm.py  test_gemini_realtime.py
plugins/getstream/: pyproject.toml
plugins/getstream/tests/: test_stream_edge_transport.py
plugins/heygen/example/: README.md
plugins/huggingface/tests/: test_hf_tool_calling.py  test_huggingface.py  test_transformers_llm.py  test_transformers_vlm.py
plugins/kokoro/example/: README.md
plugins/lemonslice/example/: lemonslice_avatar_example.py
plugins/local/: pyproject.toml
plugins/local/tests/: conftest.py  test_devices.py  test_display.py  test_edge.py  test_tracks.py
plugins/sarvam/: README.md  pyproject.toml
plugins/sarvam/example/: pyproject.toml  sarvam_example.py
plugins/turbopuffer/: pyproject.toml
tests/: base_test.py  test_audio_queue.py  test_queued_video_track.py  test_realtime_base.py
tests/test_agents/: test_agents.py
tests/test_utils/: test_av_synchronizer.py
(+58 files in other folders)
