[project]
name = "local-transport-example"
version = "0.0.0"
requires-python = ">=3.10"

# Dependencies for local audio transport
dependencies = [
    "python-dotenv>=1.0",
    "vision-agents-plugins-deepgram",
    "vision-agents-plugins-gemini",
    "vision-agents-plugins-local",
]

[tool.uv.sources]
"vision-agents-plugins-deepgram" = { path = "../../plugins/deepgram", editable = true }
"vision-agents-plugins-gemini" = { path = "../../plugins/gemini", editable = true }
"vision-agents-plugins-local" = { path = "../../plugins/local", editable = true }
"vision-agents" = { path = "../../agents-core", editable = true }
